--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
     "react-icons": "^5.4.0",
+    "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux-persist": "^6.0.0",
