--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 MONGO_URI="mongodb+srv://ay7452633:bWc5eurlNcz5uhod@cluster0.m9ztx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-
-
-bWc5eurlNcz5uhod
+PORT='5000'
+JWT_SECRET='myhostelapisecretforfuturedevelopment'
+EMAIL_PASS='wgtu uqou ouge jdbd'
+EMAIL='amanraj1172004@gmail.com'
+MAILTRAP_TOKEN='2e867ffb9664ef586183fade2462c32d'
+MAILTRAP_ENDPOINT='send.api.mailtrap.io'
