--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "headlessui": "^0.0.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
