--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-otp-input": "^3.1.1",
     "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
