--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/styled-engine-sc": "^6.4.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/vite": "^4.0.0",
+    "country-state-city": "^3.2.1",
     "firebase": "^11.2.0",
     "headlessui": "^0.0.0",
     "i18next": "^24.2.2",
@@ -34,6 +35,7 @@
     "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-scrollbars-custom": "^4.1.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14"
   },
