--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
     "@tailwindcss/vite": "^4.0.0",
     "country-state-city": "^3.2.1",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.4.7",
     "headlessui": "^0.0.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "notistack": "^3.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
