--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "notistack": "^3.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
     "react-hot-toast": "^2.5.1",
@@ -39,6 +40,7 @@
     "react-router-dom": "^7.1.3",
     "react-scrollbars-custom": "^4.1.1",
     "redux-persist": "^6.0.0",
+    "sass": "^1.85.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
