--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,7 @@ JWT_SECRET='myhostelapisecretforfuturedevelopment'
 EMAIL_PASS='wgtu uqou ouge jdbd'
 EMAIL='amanraj1172004@gmail.com'
 FOLDER_NAME='profile'
+FOLDER_NAME_HOSTEL='hostel'
 CLOUD_NAME='dsgzrkbmk'
 API_KEY='581851317746463'
 API_SECRET='pV1rbEv7iRMhtimVc3QoSWDzlNk'
