--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-google-multi-lang": "^1.0.7",
     "react-hot-toast": "^2.5.1",
